Bug 150605 - kgpg does not remove temporal files after Encrypt folder
Summary: kgpg does not remove temporal files after Encrypt folder
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Jimmy Gilles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-08 19:23 UTC by Ana Guerrero
Modified: 2007-11-28 16:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix leak of KArchive instance (3.03 KB, patch)
2007-11-26 11:58 UTC, Rolf Eike Beer
Details
untested (!) patch against KDE 3.5 (3.01 KB, patch)
2007-11-27 08:10 UTC, Rolf Eike Beer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ana Guerrero 2007-10-08 19:23:40 UTC
Version:           1.2.2 (using KDE KDE 3.5.7)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When encrypting a a folder with Kgpg via the option "Archive & Encrypt folder" in the context menu, it does not remove the temporal files *.tar created at /tmp/kde-user/file.tmp. This problem only happens if you compress with gzip or bzip2, not with zip.
Comment 1 Rolf Eike Beer 2007-11-26 11:58:05 UTC
Created attachment 22203 [details]
Fix leak of KArchive instance

This fixed the leak of the KArchive instance used for encryption. This is
against current trunk. Please give it a test and report results.
Comment 2 Ana Guerrero 2007-11-26 23:57:58 UTC
Hi Rolf, Thank you for your patch!

With "This is against current trunk" you meant this patch is for KDE4?
Comment 3 Rolf Eike Beer 2007-11-27 08:10:55 UTC
Created attachment 22211 [details]
untested (!) patch against KDE 3.5

The same thing backported to KDE 3.5. Completely untested (i.e. not even
compile tested).
Comment 4 Ana Guerrero 2007-11-28 04:01:56 UTC
The patch works perfectly against KDE 3.5.8 \o/
Thanks a lot.
Comment 5 Rolf Eike Beer 2007-11-28 08:25:08 UTC
SVN commit 742520 by dakon:

Fix leak of KArchive instance when encrypting folder

This leads to leftover temporary files besides the memory leak.

BUG:150605

Port to trunk will follow soon, there are currently some additional problems.


 M  +2 -1      kgpg.cpp  
 M  +4 -1      kgpginterface.cpp  
 M  +3 -2      kgpginterface.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=742520
Comment 6 Rolf Eike Beer 2007-11-28 16:05:31 UTC
SVN commit 742662 by dakon:

Fix leak of KArchive instance when encrypting folder 
 
This leads to leftover temporary files besides the memory leak. 
 
CCBUG:150605 
 
Encrypting folders still doesn't work but that's a completely unrelated 
problem.


 M  +2 -1      kgpg.cpp  
 M  +4 -1      kgpginterface.cpp  
 M  +5 -1      kgpginterface.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=742662