Fix leak of KArchive instance when encrypting folder

This leads to leftover temporary files besides the memory leak.

BUG:150605

Port to trunk will follow soon, there are currently some additional problems.

svn path=/branches/KDE/3.5/kdeutils/kgpg/; revision=742520