kgpginterface.cpp
@@ -44,6 +44,7 @@
 #include <kled.h>
 #include <kdebug.h>
 #include <ktempfile.h>
+#include <karchive.h>
 
 #include "kgpginterface.h"
 #include "listkeys.h"
@@ -89,10 +90,11 @@ void KgpgInterface::updateIDs(QString txtString)
             }
 }
 
-void KgpgInterface::KgpgEncryptFile(QStringList encryptKeys,KURL srcUrl,KURL destUrl, QStringList Options, bool symetrical)
+void KgpgInterface::KgpgEncryptFile(QStringList encryptKeys,KURL srcUrl,KURL destUrl, QStringList Options, bool symetrical, KArchive *ar)
 {
         sourceFile=srcUrl;
         message=QString::null;
+	arch = ar;
 
         KProcIO *proc=new KProcIO(QTextCodec::codecForLocale());
 	*proc<<"gpg"<<"--no-tty"<<"--no-secmem-warning"<<"--status-fd=2"<<"--command-fd=0"<<"--utf8-strings";
@@ -123,6 +125,7 @@ KgpgInterface::~KgpgInterface()
 
 void KgpgInterface::encryptfin(KProcess *)
 {
+	delete arch;
         if (message.find("END_ENCRYPTION")!=-1)
                 emit encryptionfinished(sourceFile);
         else {
